Fixed Button Visibility

--- a/src/routes/chooseaccount/ChooseAccount.css
+++ b/src/routes/chooseaccount/ChooseAccount.css
@@ -4,7 +4,6 @@
     flex-direction: column;
     align-items: center;
     margin-top: 150px;
-    background:paleturquoise;
 }
 
 .container{
@@ -13,13 +12,11 @@
     margin-top: 100px;
     text-align: center;
     align-self: flex-start;
-    background:paleturquoise;
 }
 
 
 .rightmarg{
     margin-right: 10px;
-    background:paleturquoise;
 }
 
 
